# Nereus

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: connectors.demo.yaml  connectors.sample.yaml  connectors.yaml
demo/: README_DEMO.md  run_demo.py  serve_local_sources.py
demo/data/: assessment_hke_gsa17_18.json  landings_fao37_hake.json
examples/: hake_area_37.md  hake_area_37.report.json
src/fra/: __init__.py  blackboard.py  cli.py  config.py  llm.py  offline.py  orchestrator.py  spatial.py  taxonomy.py
src/fra/agents/: __init__.py  _connector_agent.py  analysis.py  base.py  critic.py  literature.py  oceanography.py  planner.py  planning_heuristic.py  retrieval.py  synthesis.py
src/fra/analysis/: __init__.py  association.py  status.py  trends.py
src/fra/connectors/: __init__.py  assessment_ram.py  base.py  landings_fao.py  literature_crossref.py  literature_openalex.py  ocean_erddap.py  sample.py
src/fra/models/: __init__.py  analysis.py  common.py  literature.py  plan.py  records.py  report.py
src/fra/prompts/: critic.txt  planner.txt  synthesis.txt
src/fra/report/: __init__.py  figures.py  render.py
tests/: conftest.py  test_agents.py  test_analysis.py  test_connectors.py  test_models.py  test_normalization.py  test_orchestrator.py
tests/cassettes/: crossref_hake.json  erddap_sst.json  fao_landings.json  openalex_hake.json  ram_assessment.json
