[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fisheries-research-agents"
version = "0.1.0"
description = "Autonomous multi-agent system that collects, analyzes, and synthesizes fisheries data into research-grade reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fisheries Research Agents contributors" }]
keywords = ["fisheries", "stock-assessment", "oceanography", "multi-agent", "llm"]

dependencies = [
    "pydantic>=2.6",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pymannkendall>=1.4.3",
    "matplotlib>=3.8",
    "python-dateutil>=2.9",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "vcrpy>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-python-dateutil>=2.9",
]

[project.scripts]
fra = "fra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fra"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "TID"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["fra"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = [
    "pymannkendall.*",
    "statsmodels.*",
    "scipy.*",
    "matplotlib.*",
    "vcr.*",
    "yaml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
